[gd_scene load_steps=6 format=3 uid="uid://ccm3otq1tdv8y"]

[ext_resource type="Texture2D" uid="uid://b3guihmcntucq" path="res://Art/Testman Platformer Pack/logos/bio.png" id="1_266lh"]
[ext_resource type="Script" path="res://Screens/spash_screen.gd" id="1_ptt8v"]
[ext_resource type="PackedScene" uid="uid://ddtxrylx2l6p5" path="res://Scripts/Transitions/transition_screen.tscn" id="3_at5eq"]

[sub_resource type="Animation" id="Animation_lsd6n"]
resource_name = "DoSplash"
length = 4.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bio:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bio:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"points": PackedFloat32Array(-30, -0.25, 0, 0.1, 35, 0, 98.5, -0.25, 0, 0.25, 0, 1, 88.5, -0.4, -18, 0.3, -4, 0),
"times": PackedFloat32Array(0, 0.9, 1.3)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bio:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qnwfr"]
_data = {
"DoSplash": SubResource("Animation_lsd6n")
}

[node name="SpashScreen" type="Node2D"]
script = ExtResource("1_ptt8v")
scene = "res://Menus/main_menu.tscn"

[node name="Bio" type="Sprite2D" parent="."]
position = Vector2(154, -30)
texture = ExtResource("1_266lh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qnwfr")
}

[node name="TransitionScreen" parent="." instance=ExtResource("3_at5eq")]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="fade_in_finished" from="TransitionScreen" to="." method="_on_transition_screen_fade_in_finished"]
[connection signal="fade_out_finished" from="TransitionScreen" to="." method="_on_transition_screen_fade_out_finished"]
